remove mock data
