# docs/swagger.yaml
@@ -80,6 +80,35 @@ definitions:
       relation:
         type: string
     type: object
+  entities.PendingCampaign:
+    properties:
+      actor_address:
+        type: string
+      actor_profile_id:
+        type: string
+      ai_evaluation:
+        type: string
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      pool_id:
+        type: string
+      pool_name:
+        type: string
+      proof_blob_id:
+        type: string
+      review_status:
+        type: string
+      reviewed_by:
+        type: string
+      target:
+        type: integer
+      updated_at:
+        type: string
+    type: object
   entities.PendingChildSpecialNeedProposal:
     properties:
       actor_address:
@@ -352,6 +381,22 @@ definitions:
     - bank_org
     - owner_name
     type: object
+  request.CreateCampaignWithdrawProposalRequest:
+    properties:
+      amount:
+        minimum: 2000
+        type: integer
+      campaign_id:
+        type: string
+      description:
+        type: string
+      proof_blob_id:
+        type: string
+    required:
+    - amount
+    - campaign_id
+    - description
+    type: object
   request.CreateCenterRequest:
     properties:
       address:
@@ -405,6 +450,22 @@ definitions:
         type: string
     required:
     - need_id
+    type: object
+  request.CreatePendingCampaignRequest:
+    properties:
+      description:
+        type: string
+      pool_name:
+        type: string
+      proof_blob_id:
+        type: string
+      target:
+        minimum: 50000
+        type: integer
+    required:
+    - description
+    - pool_name
+    - target
     type: object
   request.CreatePendingWithdrawProposalRequest:
     properties:
@@ -538,6 +599,17 @@ definitions:
     required:
     - address
     - sub
+    type: object
+  request.SupportCampaignRequest:
+    properties:
+      amount:
+        minimum: 2000
+        type: integer
+      description:
+        type: string
+    required:
+    - amount
+    - description
     type: object
   request.SupportMealNeadRequest:
     properties:
@@ -978,6 +1050,47 @@ definitions:
     properties:
       message:
         type: string
+    type: object
+  response.OnChainCampaignResponse:
+    properties:
+      created_at:
+        type: string
+      creator:
+        type: string
+      description:
+        type: string
+      donations:
+        items:
+          type: string
+        type: array
+      donors:
+        items:
+          type: string
+        type: array
+      id:
+        type: string
+      pool_id:
+        type: string
+      pool_name:
+        type: string
+      proof_blob_id:
+        type: string
+      target:
+        type: integer
+      total_donated:
+        type: integer
+      updated_at:
+        type: string
+      withdraw_amount:
+        type: integer
+      withdraw_proposals:
+        items:
+          type: string
+        type: array
+      withdraws:
+        items:
+          type: string
+        type: array
     type: object
   response.PaginationDataResponse:
     properties:
@@ -3380,6 +3493,215 @@ paths:
       summary: Process a donation
       tags:
       - payment
+  /pending-pool-campaigns:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of Pending Pool Campaigns based on filter criteria
+      parameters:
+      - in: query
+        name: creator
+        type: string
+      - in: query
+        name: keyword
+        type: string
+      - in: query
+        name: max_amount
+        type: integer
+      - in: query
+        name: min_amount
+        type: integer
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: page_size
+        type: integer
+      - in: query
+        name: pool_name
+        type: string
+      - in: query
+        name: reviewer
+        type: string
+      - in: query
+        name: sort_criteria
+        type: string
+      - in: query
+        name: sort_order
+        type: string
+      - in: query
+        name: status
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.PaginationDataResponse'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: List Pending Pool Campaigns
+      tags:
+      - pending-pool-campaigns
+    post:
+      consumes:
+      - application/json
+      description: Create Pending Pool Campaign and wait for admin to review it
+      parameters:
+      - description: Create Pending Pool Campaign Detail
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreatePendingCampaignRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entities.PendingCampaign'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Create Pending Pool Campaign
+      tags:
+      - pending-pool-campaigns
+  /pending-pool-campaigns/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves Pending Pool Campaign information by its unique ID
+      parameters:
+      - description: Pending Pool Campaign ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.PendingCampaign'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Pending Pool Campaign Detail
+      tags:
+      - pending-pool-campaigns
+  /pending-pool-campaigns/{id}/approve:
+    post:
+      consumes:
+      - application/json
+      description: Prepares and builds a transaction for approve and upload Pending
+        Pool Campaign on-chain
+      parameters:
+      - description: Pending Pool Campaign ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.BuildTransactionResponse'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Approve a Pending Pool Campaign and upload to Sui Blockchain
+      tags:
+      - pending-pool-campaigns
+  /pending-pool-campaigns/{id}/refuse:
+    post:
+      consumes:
+      - application/json
+      description: Refuse Pending Pool Campaign
+      parameters:
+      - description: Pending Pool Campaign ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Refuse Pending Pool Campaign
+      tags:
+      - pending-pool-campaigns
   /pending-special-needs:
     get:
       consumes:
@@ -3763,6 +4085,180 @@ paths:
       summary: Refuse a pending withdraw proposal
       tags:
       - Pending Withdrawal
+  /pool-campaigns:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of Pool Campaigns based on filter criteria
+      parameters:
+      - in: query
+        name: creator
+        type: string
+      - in: query
+        name: keyword
+        type: string
+      - in: query
+        name: max_amount
+        type: integer
+      - in: query
+        name: min_amount
+        type: integer
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: page_size
+        type: integer
+      - in: query
+        name: pool_name
+        type: string
+      - in: query
+        name: sort_criteria
+        type: string
+      - in: query
+        name: sort_order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.PaginationDataResponse'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: List Pool Campaigns
+      tags:
+      - pool-campaigns
+  /pool-campaigns/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves Pool Campaign information by its unique ID
+      parameters:
+      - description: Pool Campaign ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.OnChainCampaignResponse'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Pool Campaign Detail
+      tags:
+      - pool-campaigns
+  /pool-campaigns/{id}/support:
+    post:
+      consumes:
+      - application/json
+      description: Support a Pool Campaign
+      parameters:
+      - description: Pool Campaign ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Support Pool Campaign Detail
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.SupportCampaignRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.UrlAPIResponse'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Support a Pool Campaign
+      tags:
+      - pool-campaigns
+  /pool-campaigns/withdraw-proposal:
+    post:
+      consumes:
+      - application/json
+      description: Create Pool Campaign Pending Withdraw Proposal and wait for admin
+        to review it
+      parameters:
+      - description: Create Pool Campaign Pending Withdraw Proposal Detail
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateCampaignWithdrawProposalRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entities.PendingWithdrawProposal'
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageAPIResponse'
+      security:
+      - BearerAuth: []
+      summary: Create Pool Campaign Pending Withdraw Proposal
+      tags:
+      - pool-campaigns
   /profiles/{id}:
     post:
       consumes:
